--- a/silver_contract/views/silver_cutoff_factor_views.xml
+++ b/silver_contract/views/silver_cutoff_factor_views.xml
@@ -5,10 +5,10 @@
             <field name="name">silver.cutoff.factor.view.tree</field>
             <field name="model">silver.cutoff.factor</field>
             <field name="arch" type="xml">
-                <tree>
+                <list>
                     <field name="name"/>
                     <field name="description"/>
-                </tree>
+                </list>
             </field>
         </record>
 
