--- a/silver_crm/wizard/find_node_wizard_views.xml
+++ b/silver_crm/wizard/find_node_wizard_views.xml
@@ -12,11 +12,11 @@
                         Haga clic en "Seleccionar" para asignar un nodo a la oportunidad.
                     </p>
                     <field name="line_ids" nolabel="1">
-                        <tree create="false" edit="false">
+                        <list create="false" edit="false">
                             <field name="node_id"/>
                             <field name="distance" string="Distancia (mts)"/>
                             <button name="action_select_node" type="object" string="Seleccionar" class="oe_highlight"/>
-                        </tree>
+                        </list>
                     </field>
                     <footer>
                         <button string="Cerrar" class="btn-secondary" special="cancel"/>
