--- a/silver_product/views/stock_production_lot_views.xml
+++ b/silver_product/views/stock_production_lot_views.xml
@@ -6,14 +6,14 @@
             <field name="name">stock.lot.tree.silver</field>
             <field name="model">stock.lot</field>
             <field name="arch" type="xml">
-                <tree string="Lotes/Números Seriales" multi_edit="1">
+                <list string="Lotes/Números Seriales" multi_edit="1">
                     <field name="name" decoration-bf="1"/>
                     <field name="ref" optional="show"/>
                     <field name="product_id" readonly="1"/>
                     <field name="create_date" optional="show"/>
                     <field name="company_id" groups="base.group_multi_company"/>
                     <field name="last_delivery_partner_id" optional="hide" string="Transfer to"/>
-                </tree>
+                </list>
             </field>
         </record>
 
