--- a/silver_contract/views/silver_contract_holding_views.xml
+++ b/silver_contract/views/silver_contract_holding_views.xml
@@ -5,10 +5,10 @@
             <field name="name">silver.contract.holding.view.tree</field>
             <field name="model">silver.contract.holding</field>
             <field name="arch" type="xml">
-                <tree>
+                <list>
                     <field name="name"/>
                     <field name="partner_id"/>
-                </tree>
+                </list>
             </field>
         </record>
 
