--- a/silver_contract/views/silver_reception_channel_views.xml
+++ b/silver_contract/views/silver_reception_channel_views.xml
@@ -5,12 +5,12 @@
             <field name="name">silver.reception.channel.view.tree</field>
             <field name="model">silver.reception.channel</field>
             <field name="arch" type="xml">
-                <tree>
+                <list>
                     <field name="name"/>
                     <field name="is_internal_referral"/>
                     <field name="commission_percentage"/>
                     <field name="team_id"/>
-                </tree>
+                </list>
             </field>
         </record>
 
