--- a/silver_helpdesk_stock/views/helpdesk_ticket_views.xml
+++ b/silver_helpdesk_stock/views/helpdesk_ticket_views.xml
@@ -16,12 +16,12 @@
                 <page name="change_suspencion" position="after">
                      <page string="Materiales Asignados" name="stock_helpdesk">
                         <field name="stock_line_ids">
-                            <tree editable="bottom">
+                            <list editable="bottom">
                                 <field name="product_id" options="{'no_create': True, 'no_create_edit':True}"/>
                                 <field name="qty_stock"/>
                                 <field name="lot_id"/>
                                 <field name="is_done"/>
-                            </tree>
+                            </list>
                         </field>
                     </page>
                     
@@ -31,13 +31,13 @@
                         </div>
                         <field name="is_remove_extra_equipment" invisible="1"/>
                         <field name="device_extra_line_ids">
-                            <tree editable="bottom" create="false" delete="false">
+                            <list editable="bottom" create="false" delete="false">
                                 <field name="product_id" options="{'no_create': True, 'no_create_edit':True}"/>
                                 <field name="qty_stock"/>
                                 <field name="lot_id"/>
                                 <field name="is_done"/>
                                 <field name="is_remove_materials"/>
-                            </tree>
+                            </list>
                         </field>
                     </page>
                     
@@ -64,7 +64,7 @@
                             </group>
 
                             <field name="new_stock_equipment_line_ids" readonly="0" context="{'default_is_extra_material_line': True, 'default_qty_stock': 1}" invisible="not is_add_extra_equipment" nolabel="1">
-                                <tree editable="bottom">
+                                <list editable="bottom">
                                     <field name="product_id" domain="[('tracking', '=', 'serial')]" options="{'no_create': True, 'no_create_edit':True}"/>
                                     <field name="qty_stock" readonly="1" force_save="1"/>
                                     <field name="lot_id"/>
@@ -72,7 +72,7 @@
                                     <field name="is_invoice_covered" optional="hide"/>
                                     <field name="is_promotion" invisible="1"/>
                                     <field name="is_extra_material_line" invisible="1"/>
-                                </tree>
+                                </list>
                             </field>
                         </group>
                     </page>
