--- a/silver_isp_management/views/isp_contract_views.xml
+++ b/silver_isp_management/views/isp_contract_views.xml
@@ -17,11 +17,11 @@
                 <xpath expr="//notebook" position="inside">
                     <page string="Equipos Instalados">
                         <field name="equipment_ids">
-                            <tree editable="bottom">
+                            <list editable="bottom">
                                 <field name="product_id"/>
                                 <field name="serial_number"/>
                                 <field name="state"/>
-                            </tree>
+                            </list>
                         </field>
                     </page>
                 </xpath>
