--- a/silver_network/views/silver_tr_069_views.xml
+++ b/silver_network/views/silver_tr_069_views.xml
@@ -12,10 +12,10 @@
             <field name="name">silver.tr.069.tree</field>
             <field name="model">silver.tr.069</field>
             <field name="arch" type="xml">
-                <tree string="Servidores TR-069 ISP">
+                <list string="Servidores TR-069 ISP">
                     <field name="name"/>
                     <field name="description"/>
-                </tree>
+                </list>
             </field>
         </record>
 
