--- a/silver_provisioning/views/silver_ap_views.xml
+++ b/silver_provisioning/views/silver_ap_views.xml
@@ -19,13 +19,13 @@
                       <page string="Contratos">
 
                         <field name="contract_ids">
-                            <tree create="false">
+                            <list create="false">
 
                                  <field name="id" column_invisible="1"/>
                                 <field name="name" widget="link_record"/>
                                 <field name="partner_id" widget="many2one"/>
                                 <field name="state"/>
-                            </tree>
+                            </list>
                         </field>
                          <div class="o_action_manager">
                               <button name="action_create_contract" type="object" string="Crear" class="btn-link nobold"/>
