--- a/silver_ticket/views/silver_ticket_views.xml
+++ b/silver_ticket/views/silver_ticket_views.xml
@@ -7,13 +7,13 @@
             <field name="name">silver.ticket.tree</field>
             <field name="model">silver.ticket</field>
             <field name="arch" type="xml">
-                <tree string="Tickets">
+                <list string="Tickets">
                     <field name="name"/>
                     <field name="partner_id"/>
                     <field name="ticket_type_id"/>
                     <field name="stage_id"/>
                     <field name="create_date"/>
-                </tree>
+                </list>
             </field>
         </record>
 
