--- a/silverdoc/views/silverdoc_module_views.xml
+++ b/silverdoc/views/silverdoc_module_views.xml
@@ -5,10 +5,10 @@
         <field name="name">silverdoc.module.tree</field>
         <field name="model">silverdoc.module</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="project_id"/>
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -26,9 +26,9 @@
                     <notebook>
                         <page string="Temas">
                             <field name="topic_ids">
-                                <tree editable="bottom">
+                                <list editable="bottom">
                                     <field name="name"/>
-                                </tree>
+                                </list>
                             </field>
                         </page>
                     </notebook>
