--- a/silverdoc/views/silverdoc_topic_views.xml
+++ b/silverdoc/views/silverdoc_topic_views.xml
@@ -5,10 +5,10 @@
         <field name="name">silverdoc.topic.tree</field>
         <field name="model">silverdoc.topic</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="module_id"/>
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -26,9 +26,9 @@
                     <notebook>
                         <page string="Documentos">
                             <field name="document_ids">
-                                <tree editable="bottom">
+                                <list editable="bottom">
                                     <field name="name"/>
-                                </tree>
+                                </list>
                             </field>
                         </page>
                     </notebook>
